// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic 1`] = `
<View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          Object {
            "backgroundColor": "#FFF",
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
                "letterSpacing": -0.32,
              },
              Object {
                "color": "#000",
              },
              Object {},
            ]
          }
        >
          Basic
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with accessory 1`] = `
<View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          Object {
            "backgroundColor": "#FFF",
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
                "letterSpacing": -0.32,
              },
              Object {
                "color": "#000",
              },
              Object {},
            ]
          }
        >
          Basic
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 1,
                "borderTopWidth": 1,
                "height": 10,
                "marginLeft": 7,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              },
              Object {
                "borderColor": "#C7C7CC",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with testID 1`] = `
<View
  testID="testID"
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "flexGrow": 1,
        },
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          Object {
            "backgroundColor": "#FFF",
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
                "letterSpacing": -0.32,
              },
              Object {
                "color": "#000",
              },
              Object {},
            ]
          }
        >
          Basic
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
